--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,6 +1,6 @@
 use_frameworks!
 
-platform :ios, '10.0'
+platform :ios, '15.0'
 
 target 'TLEnvironment_Example' do
   pod 'TLEnvironment', :path => '../'
@@ -9,5 +9,14 @@ target 'TLEnvironment_Example' do
     inherit! :search_paths
 
     
+  end
+end
+
+post_install do |installer|
+  installer.pods_project.targets.each do |target|
+    target.build_configurations.each do |config|
+      config.build_settings['CODE_SIGNING_ALLOWED'] = "NO"
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = "15.0"
+    end
   end
 end
